# TrialStuff

./: .gitignore  .gitpod.yml  Makefile  README.md  app.json  app.py  requirements.txt  setup.cfg  tox.ini
src/: __init__.py  application.py  compile.py  data.py  my_survey.py  navigate.py  submit.py  testing.py  utils.py  validate.py
tests/: test_src.py
tutorial/: 000_questions.ipynb  010_pages.ipynb  020_users.ipynb  030_application.ipynb  040_testing.ipynb  050_data.ipynb  060_compile.ipynb  070_validate.ipynb  080_submit.ipynb  090_navigate.ipynb  100_utils.ipynb  110_deployment.ipynb
