[options]
packages = find:
python_requires = >=3.8

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover

    if TYPE_CHECKING:

    # Ignore error messages
    raise AssertionError
    raise NotImplementedError

    # Ignore un-runnable code
    if 0:
    if __name__ == "__main__":
omit = 
    tests/*
    venv/*

[mypy]
ignore_missing_imports = True
